chore demo: put a warn about backward compatibility

--- a/modules/file-input/demo/file-input.html
+++ b/modules/file-input/demo/file-input.html
@@ -5,6 +5,10 @@
         <code>lx-file-input</code> is a directive that create an <code>input file</code> element.
     </p>
 
+    <p class="main-section__warning">
+        This component has been completly reworked since LumX beta version (v0.3.96).<br />Please refer to the updated documentation.
+    </p>
+
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/file-input/includes/basic.html" lx-js-path="/js/file-input/demo/demo-file-input_controller.js"></lx-component>
 
     <lx-component-attributes>
