--- a/modules/progress/demo/progress.html
+++ b/modules/progress/demo/progress.html
@@ -5,6 +5,10 @@
         <code>lx-progress</code> is a directive that create a circular or a linear progress.
     </p>
 
+    <p class="main-section__warning">
+        This component has been completly reworked since LumX beta version (v0.3.96).<br />Please refer to the updated documentation.
+    </p>
+
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/progress/includes/basic.html" lx-js-path="/js/progress/demo/demo-progress_controller.js"></lx-component>
 
     <lx-component-attributes>
