--- a/modules/tabs/demo/tabs.html
+++ b/modules/tabs/demo/tabs.html
@@ -5,6 +5,10 @@
         <code>lx-tabs</code> is a directive that create a navigation system with tabs.
     </p>
 
+    <p class="main-section__warning">
+        This component has been completly reworked since LumX beta version (v0.3.96).<br />Please refer to the updated documentation.
+    </p>
+
     <lx-component lx-title="Basic" lx-path="/includes/modules/tabs/includes/basic.html" lx-js-path="/js/tabs/demo/demo-tabs_controller.js">
         One <code>lx-tab</code> directive per tab need to be transcluded.<br /><code>lx-tab</code> directive has a label or an icon as parameter and pane content as transcluded element.
     </lx-component>
