--- a/modules/date-picker/demo/date-picker.html
+++ b/modules/date-picker/demo/date-picker.html
@@ -5,6 +5,10 @@
         <code>lx-date-picker</code> is a directive that create a date picker. This date picker is managed by the <code>LxDatePickerService</code>.
     </p>
 
+    <p class="main-section__warning">
+        This component has been completly reworked since LumX beta version (v0.3.96).<br />Please refer to the updated documentation.
+    </p>
+
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/date-picker/includes/basic.html" lx-js-path="/js/date-picker/demo/demo-date-picker_controller.js">
         A callback function can be called with the selected date as parameter.
     </lx-component>
