--- a/modules/search-filter/demo/search-filter.html
+++ b/modules/search-filter/demo/search-filter.html
@@ -5,6 +5,10 @@
         <code>lx-search-filter</code> is a directive that create a search filter with various style options.
     </p>
 
+    <p class="main-section__warning">
+        This component has been completly reworked since LumX beta version (v0.3.96).<br />Please refer to the updated documentation.
+    </p>
+
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/search-filter/includes/basic.html" lx-js-path="/js/search-filter/demo/demo-search-filter_controller.js"></lx-component>
 
     <lx-component-attributes>
